Bugfix in the POM file for the v1